<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FFDAB9"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view_year="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view_year:cardCornerRadius="4dp"
            card_view_year:cardElevation="4dp">

            <LinearLayout
                android:orientation="horizontal"
                android:background="#D8BFD8"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_weight="1"
                    android:id="@+id/left_imgBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/left"
                    android:scaleType="centerCrop"
                    android:src="@drawable/left111" />

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textStyle="bold|italic"
                    android:gravity="center"
                    android:textColor="#6495ED"
                    android:textSize="30sp" />

                <ImageButton
                    android:layout_weight="1"
                    android:id="@+id/right_imgBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/right"
                    android:scaleType="centerCrop"
                    android:src="@drawable/right111" />

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view_total="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view_total:cardCornerRadius="4dp"
        card_view_total:cardElevation="4dp">

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:background="#D8BFD8"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/total"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/total"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/total_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Бабло vsego"
                android:textColor="#6495ED"
                android:textSize="20sp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_balance"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
</ScrollView>